<resources>
    <string name="app_name">Chip E-ktp</string>
    <string name="placeholder_login_email">Masukkan Email Anda</string>
    <string name="placeholder_login_password">Masukkan Password Anda</string>
    <string name="txt_button_login">Login</string>
    <string name="txt_login_pengguna">Login Pengguna</string>
    <string name="txt_buat_akun">Buat Akun Disini</string>
    <string name="placeholder_konfirmasi_password">Konfirmasi Password</string>
    <string name="txt_register_pengguna">Register Pengguna</string>
    <string name="txt_button_register">Register</string>
    <string name="txt_nama_pengguna">Nama Pengguna</string>
    <string name="txt_button_buka_pintu">Buka Pintu</string>
    <string name="txt_button_hapus_data">Hapus Data</string>
    <string name="placeholder_scan_ktp">Scan KTP Anda</string>
    <string name="placeholder_nama_pengguna">Masukkan Nama Pengguna</string>
    <string name="button_txt_tambah_data">Tambah Data</string>
    <string name="txt_konfirmasi_password">Konfirmasi Password</string>

    <string name="home">Home</string>
    <string name="Notifikasi">Notifikasi</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_waktu">Waktu</string>
    <string name="txt_lupa_password">Lupa Password?</string>
    <string name="txt_reset_password">Reset Password</string>

</resources>