<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.LoginActivity"
    >

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25sp"
        android:layout_marginEnd="25sp"
        android:layout_centerInParent="true"
        app:cardCornerRadius="20sp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_login_pengguna"
                        android:textColor="@color/black"
                        android:textSize="25sp"
                        android:layout_marginTop="20sp"
                        android:layout_gravity="center_horizontal"
                        android:textStyle="bold"
                        />


                    <EditText
                        android:id="@+id/txtemail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/placeholder_login_email"
                        android:layout_marginStart="20sp"
                        android:layout_marginEnd="20sp"
                        android:layout_marginTop="22sp"
                        android:inputType="text"
                        />

                    <EditText
                        android:id="@+id/txtpassword"
                        android:inputType="textPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/placeholder_login_password"
                        android:layout_marginStart="20sp"
                        android:layout_marginEnd="20sp"
                        android:layout_marginTop="22sp"
                        />

                    <Button
                        android:id="@+id/btnlogin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20sp"
                        android:layout_marginStart="20sp"
                        android:layout_marginEnd="20sp"
                        android:text="@string/txt_button_login"
                        android:layout_marginBottom="20sp"
                        />

                    <TextView
                        android:id="@+id/lblregister"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10sp"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/txt_buat_akun"
                        android:textColor="@color/black"
                        android:textSize="17sp"
                        />

                    <TextView
                        android:id="@+id/lbllupassword"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="30sp"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/txt_lupa_password"
                        android:textColor="@color/black"
                        android:textSize="17sp"
                        />


        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>