<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.TambahEditDataActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25sp"
        android:layout_marginEnd="25sp"
        android:layout_centerInParent="true"
        app:cardCornerRadius="20sp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Tambah/Edit Pengguna"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:layout_marginTop="20sp"
                android:layout_gravity="center_horizontal"
                android:textStyle="bold"
                />


            <EditText
                android:id="@+id/txtid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/placeholder_scan_ktp"
                android:layout_marginStart="20sp"
                android:layout_marginEnd="20sp"
                android:layout_marginTop="22sp"
                android:inputType="text"
                android:nextFocusDown="@id/txtid"
                />

            <EditText
                android:id="@+id/txtusername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/placeholder_nama_pengguna"
                android:layout_marginStart="20sp"
                android:layout_marginEnd="20sp"
                android:layout_marginTop="22sp"
                android:inputType="text"
                android:nextFocusDown="@id/txtusername"
                />

            <Button
                android:id="@+id/btntambahdata"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:layout_marginStart="20sp"
                android:layout_marginEnd="20sp"
                android:text="@string/button_txt_tambah_data"
                android:layout_marginBottom="20sp"
                />


        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>